crates/wdl-grammar/tests/parsing/empty-pair-type/source.wdl
# This is a test of parsing an empty pair type.

version 1.1

struct Foo {
    Pair[] a
}
